# mosec_emb

./: .gitignore  Dockerfile  Makefile  README.md  build.envd  client.py  main.py  pyproject.toml
.github/workflows/: check.yml  release.yml
