[project]
name = "mosec_emb"
dynamic = ["version"]
description = "Embedding service with mosec."
authors = [{ name = "Keming", email = "kemingy94@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mosec",
    "llmspec",
    "torch",
    "transformers",
    "numpy",
]
[project.optional-dependencies]
dev = [
    "ruff",
]
[project.urls]
"Homepage" = "https://github.com/kemingy/mosec_emb"
[project.scripts]
"mosec-emb" = "main:main"

[tool.ruff]
target-version = "py38"
line-length = 88
[tool.pylint]
select = ["E", "F", "B", "I", "SIM", "TID", "PL"]
max-branches = 35
max-statements = 100
